--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "my-react-portfolio",
   "version": "0.1.0",
+  "homepage": "https://anchoviess.github.io/React-Portfolio/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.12.0",
